5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1636_2449.log
== TEST (2019-04-14 19:48:59) 
-- CODE:
a = float(input("a"))
b = float(input("b"))
c = float(input("c"))
d = float(input("d"))
e = float(input("e"))
f = float(input("f"))
if x = (c * e) - (b * f) / ( a * e) - (b *d) y = (a * f) - (c * d) / (a * e)  -  (b * d):
else: 
	print("Nao tem solucao)


-- ERROR:
File "XXXX", line 7
    if x = (c * e) - (b * f) / ( a * e) - (b *d) y = (a * f) - (c * d) / (a * e)  -  (b * d):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:49:11) 
-- CODE:
a = float(input("a"))
b = float(input("b"))
c = float(input("c"))
d = float(input("d"))
e = float(input("e"))
f = float(input("f"))
if x = (c * e) - (b * f) / ( a * e) - (b *d) ,y = (a * f) - (c * d) / (a * e)  -  (b * d):
else: 
	print("Nao tem solucao)


-- ERROR:
File "XXXX", line 7
    if x = (c * e) - (b * f) / ( a * e) - (b *d) ,y = (a * f) - (c * d) / (a * e)  -  (b * d):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:49:23) 
-- CODE:
a = float(input("a"))
b = float(input("b"))
c = float(input("c"))
d = float(input("d"))
e = float(input("e"))
f = float(input("f"))
if x = (c * e) - (b * f) / ( a * e) - (b *d) 
y = (a * f) - (c * d) / (a * e)  -  (b * d):
else: 
	print("Nao tem solucao)


-- ERROR:
File "XXXX", line 7
    if x = (c * e) - (b * f) / ( a * e) - (b *d) 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:49:30) 
-- CODE:
a = float(input("a"))
b = float(input("b"))
c = float(input("c"))
d = float(input("d"))
e = float(input("e"))
f = float(input("f"))
if x = (c * e) - (b * f) / ( a * e) - (b *d) :
y = (a * f) - (c * d) / (a * e)  -  (b * d):
else: 
	print("Nao tem solucao)


-- ERROR:
File "XXXX", line 7
    if x = (c * e) - (b * f) / ( a * e) - (b *d) :
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:50:22) 
-- CODE:
a = float(input("a"))
b = float(input("b"))
c = float(input("c"))
d = float(input("d"))
e = float(input("e"))
f = float(input("f"))
if x = (c * e) - (b * f) / ( a * e) - (b *d)
y = (a * f) - (c * d) / (a * e)  -  (b * d):
	m = "pode"
else: 
	print("Nao tem solucao)


-- ERROR:
File "XXXX", line 7
    if x = (c * e) - (b * f) / ( a * e) - (b *d)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
